--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
   <body>
     <section class="accordion">
       <h1>FAQ</h1>
+      <br /><br />
 
       <div class="title" id="section1">Section 1</div>
       <div class="description">
@@ -24,5 +25,6 @@
         <p>Lorem ipsum...</p>
       </div>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
